5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1601_820.log
== TEST (2019-04-13 09:44:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 10:38:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
onca = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
osso = valor % 50

# Quantidade de notas de R$ 10
bflor = osso // 10

# Valor restante a ser sacado com notas menores que R$ 50
necta = osso % 10

# Quantidade de notas de R$ 2
tartaruga = necta // 2

print(int(onca))
print(int(bflor))
print(int(tartaruga))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    onca = valor // 50 
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 10:39:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
onca = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
osso = valor % 50

# Quantidade de notas de R$ 10
bflor = osso // 10

# Valor restante a ser sacado com notas menores que R$ 50
necta = osso % 10

# Quantidade de notas de R$ 2
tartaruga = necta // 2

print(int(onca))
print(int(bflor))
print(int(tartaruga))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 10:43:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
onca = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
osso = valor % 50

# Quantidade de notas de R$ 10
bflor = osso // 10

# Valor restante a ser sacado com notas menores que R$ 50
necta = osso % 10

# Quantidade de notas de R$ 2
tartaruga = necta // 2

print(int(onca))
print(int(bflor))
print(int(tartaruga))

-- EXECUTION TIME:
0.178962
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
